# PyEasyMenu

./: .gitignore  README.md  setup.cfg
PyEasyMenu/: __init__.py
easyMenu/: __init__.py  menuClass.py
src/PyEasyMenu/: menuClass.py
src/PyEasyMenu.egg-info/: PKG-INFO
