[metadata]
name = PyEasyMenu
version = 0.0.2
author = Giulio Venturini
author_email = giulioventuriniwork@gmail.com
description = A python package used to easily create complex cmd menus just by writing a json filedescription = A python package used to easily create complex cmd menus just by writing a json file
long_description  = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BayoDev/PyEasyMenu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
	=src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
